// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can generate a sidebar by default 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "label": "Overview",
      },
      Object {
        "items": Array [
          Object {
            "id": "addon",
            "label": "Overview",
          },
          Object {
            "items": Array [
              Object {
                "id": "addon.component",
                "label": "Overview",
              },
              Object {
                "id": "addon.component._constructor_",
                "label": "(constructor)",
              },
              Object {
                "id": "addon.component.args",
                "label": "args",
              },
            ],
            "label": "Component",
          },
          Object {
            "items": Array [
              Object {
                "id": "addon.stepper",
                "label": "Overview",
              },
              Object {
                "id": "addon.stepper.foo",
                "label": "foo",
              },
              Object {
                "id": "addon.stepper.render",
                "label": "render",
              },
            ],
            "label": "Stepper",
          },
          Object {
            "id": "addon.steppersignature",
            "label": "StepperSignature",
          },
          Object {
            "id": "addon.sum",
            "label": "sum",
          },
        ],
        "label": "addon",
      },
    ],
    "label": "Packages",
  },
]
`;

exports[`classes 1`] = `
Object {
  "foo/addon.bam.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bam
hide_title: true
title: Bam class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bam](./addon.bam.md)

## Bam class


**Signature:**

\`\`\`typescript
export declare class Bam extends Baz implements Renderer 
\`\`\`
**Extends:** [Baz](./addon.baz.md)

**Implements:** [Renderer](./addon.renderer.md)

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [render()](./addon.bam.render.md) |  |  |

",
  "foo/addon.bam.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bam.render
hide_title: true
title: Bam.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bam](./addon.bam.md) &gt; [render](./addon.bam.render.md)

## Bam.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.baz._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz._constructor_
hide_title: true
title: Baz.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md) &gt; [(constructor)](./addon.baz._constructor_.md)

## Baz.(constructor)

Constructs a new instance of the \`Baz\` class

**Signature:**

\`\`\`typescript
constructor(name: string);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  name | string |  |

",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz class


**Signature:**

\`\`\`typescript
export declare class Baz extends Bizz 
\`\`\`
**Extends:** [Bizz](./addon.bizz.md)

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(name)](./addon.baz._constructor_.md) |  | Constructs a new instance of the <code>Baz</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [myName](./addon.baz.myname.md) |  | string |  |

",
  "foo/addon.baz.myname.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz.myname
hide_title: true
title: Baz.myName property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md) &gt; [myName](./addon.baz.myname.md)

## Baz.myName property

**Signature:**

\`\`\`typescript
myName: string;
\`\`\`
",
  "foo/addon.bizz.id.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bizz.id
hide_title: true
title: Bizz.id property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bizz](./addon.bizz.md) &gt; [id](./addon.bizz.id.md)

## Bizz.id property

**Signature:**

\`\`\`typescript
id: number;
\`\`\`
",
  "foo/addon.bizz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bizz
hide_title: true
title: Bizz class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bizz](./addon.bizz.md)

## Bizz class


**Signature:**

\`\`\`typescript
export declare class Bizz 
\`\`\`

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [id](./addon.bizz.id.md) |  | number |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Bizz](./addon.bizz.md) |  |  |

## Interfaces

|  Interfaces | Description | Import Path |
|  --- | --- | --- |
|  [Renderer](./addon.renderer.md) |  |  |

",
  "foo/addon.renderer.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.renderer
hide_title: true
title: Renderer interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Renderer](./addon.renderer.md)

## Renderer interface


**Signature:**

\`\`\`typescript
export interface Renderer 
\`\`\`

## Methods

|  Method | Description |
|  --- | --- |
|  [render()](./addon.renderer.render.md) |  |

",
  "foo/addon.renderer.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.renderer.render
hide_title: true
title: Renderer.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Renderer](./addon.renderer.md) &gt; [render](./addon.renderer.render.md)

## Renderer.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`delegate can be used to customize frontmatter 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component.(constructor) -- CUSTOM THINGY foo/addon.component._constructor_.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component.args property -- CUSTOM THINGY foo/addon.component.args.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Component class -- CUSTOM THINGY foo/addon.component.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: addon package -- CUSTOM THINGY foo/addon.md
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper.foo() method -- CUSTOM THINGY foo/addon.stepper.foo.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper Component -- CUSTOM THINGY foo/addon.stepper.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: Stepper.render() method -- CUSTOM THINGY foo/addon.stepper.render.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: StepperSignature Component Signature -- CUSTOM THINGY foo/addon.steppersignature.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: sum() Helper -- CUSTOM THINGY foo/addon.sum.md
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
basicallyAnything: can go here
title: API Reference -- CUSTOM THINGY foo/index.md
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`delegate can be used to customize the page 1`] = `
Object {
  "foo/index.md": "\`\`\`typescript
const foo = \\"Bar\\";
\`\`\`
",
}
`;

exports[`delegate can be used to register custom nodes 1`] = `
Object {
  "foo/index.md": "🎉 NEAT 🎉
",
}
`;

exports[`delegate can be used to register custom nodes that require recursion 1`] = `
Object {
  "foo/index.md": " 🎉 FUN 🎉 🎉 TIME 🎉 🎉 CONTAINER 🎉 🎉 CHILDREN 🎉
",
}
`;

exports[`frameworkItemType 1`] = `
Object {
  "foo/addon.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bar
hide_title: true
title: Bar Widget
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bar](./addon.bar.md)

## Bar Widget

**Signature:**

\`\`\`typescript
export declare class Bar 
\`\`\`

## Remarks

A widget for widgetting

## Example


\`\`\`ts
const bar = new Bar();
\`\`\`

",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz Thingy
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz Thingy

**Signature:**

\`\`\`typescript
export declare class Baz 
\`\`\`

## Remarks

A thingy for thingying

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Widgets

|  Widgets | Description | Import Path |
|  --- | --- | --- |
|  [Bar](./addon.bar.md) |  |  |

## Thingies

|  Thingies | Description | Import Path |
|  --- | --- | --- |
|  [Baz](./addon.baz.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`functions 1`] = `
Object {
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`if a custom delegate is passed with only the required fields the default implementation runs for the methods 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`interfaces 1`] = `
Object {
  "foo/addon.baz.id.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz.id
hide_title: true
title: Baz.id property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md) &gt; [id](./addon.baz.id.md)

## Baz.id property

**Signature:**

\`\`\`typescript
id: number;
\`\`\`
",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz interface


**Signature:**

\`\`\`typescript
export interface Baz 
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [id](./addon.baz.id.md) | number |  |

",
  "foo/addon.biz.bam.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.biz.bam
hide_title: true
title: Biz.bam property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Biz](./addon.biz.md) &gt; [bam](./addon.biz.bam.md)

## Biz.bam property

**Signature:**

\`\`\`typescript
bam: T;
\`\`\`
",
  "foo/addon.biz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.biz
hide_title: true
title: Biz interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Biz](./addon.biz.md)

## Biz interface


**Signature:**

\`\`\`typescript
export interface Biz<T = Foo> 
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [bam](./addon.biz.bam.md) | T |  |
|  [name](./addon.biz.name.md) | string |  |

",
  "foo/addon.biz.name.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.biz.name
hide_title: true
title: Biz.name property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Biz](./addon.biz.md) &gt; [name](./addon.biz.name.md)

## Biz.name property

**Signature:**

\`\`\`typescript
name: string;
\`\`\`
",
  "foo/addon.foo.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.foo.bar
hide_title: true
title: Foo.bar property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Foo](./addon.foo.md) &gt; [bar](./addon.foo.bar.md)

## Foo.bar property

**Signature:**

\`\`\`typescript
bar: string;
\`\`\`
",
  "foo/addon.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.foo
hide_title: true
title: Foo interface
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Foo](./addon.foo.md)

## Foo interface


**Signature:**

\`\`\`typescript
export interface Foo extends Baz 
\`\`\`

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [bar](./addon.foo.bar.md) | string |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Interfaces

|  Interfaces | Description | Import Path |
|  --- | --- | --- |
|  [Foo](./addon.foo.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`it defaults to built in delegate 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`kitchen sink 1`] = `
Object {
  "foo/addon.component._constructor_.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component._constructor_
hide_title: true
title: Component.(constructor)
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [(constructor)](./addon.component._constructor_.md)

## Component.(constructor)

Constructs a new instance of the \`Component\` class

**Signature:**

\`\`\`typescript
constructor(args: T);
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  args | T |  |

",
  "foo/addon.component.args.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component.args
hide_title: true
title: Component.args property
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md) &gt; [args](./addon.component.args.md)

## Component.args property

**Signature:**

\`\`\`typescript
args: T;
\`\`\`
",
  "foo/addon.component.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.component
hide_title: true
title: Component class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Component](./addon.component.md)

## Component class


**Signature:**

\`\`\`typescript
export declare class Component<T> 
\`\`\`

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(args)](./addon.component._constructor_.md) |  | Constructs a new instance of the <code>Component</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [args](./addon.component.args.md) |  | T |  |

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package


## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Component](./addon.component.md) |  |  |

## Components

|  Components | Description | Import Path |
|  --- | --- | --- |
|  [Stepper](./addon.stepper.md) |  |  |

## Component Signatures

|  Component Signatures | Description | Import Path |
|  --- | --- | --- |
|  [StepperSignature](./addon.steppersignature.md) |  | my-addon/components/stepper |

## Helpers

|  Helpers | Description | Import Path |
|  --- | --- | --- |
|  [sum(a, b)](./addon.sum.md) |  | addon/helpers/sum |

",
  "foo/addon.stepper.foo.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.foo
hide_title: true
title: Stepper.foo() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [foo](./addon.stepper.foo.md)

## Stepper.foo() method

**Signature:**

\`\`\`typescript
foo(): Record<string, unknown>;
\`\`\`
**Returns:**

Record&lt;string, unknown&gt;

",
  "foo/addon.stepper.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper
hide_title: true
title: Stepper Component
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md)

## Stepper Component

**Signature:**

\`\`\`typescript
export default class Stepper extends Component<StepperSignature> 
\`\`\`
**Extends:** [Component](./addon.component.md)<!-- -->&lt;[StepperSignature](./addon.steppersignature.md)<!-- -->&gt;

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [foo()](./addon.stepper.foo.md) |  |  |
|  [render()](./addon.stepper.render.md) |  |  |

",
  "foo/addon.stepper.render.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.stepper.render
hide_title: true
title: Stepper.render() method
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Stepper](./addon.stepper.md) &gt; [render](./addon.stepper.render.md)

## Stepper.render() method

**Signature:**

\`\`\`typescript
render(): void;
\`\`\`
**Returns:**

void

",
  "foo/addon.steppersignature.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.steppersignature
hide_title: true
title: StepperSignature Component Signature
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [StepperSignature](./addon.steppersignature.md)

## StepperSignature Component Signature

### Import Path: my-addon/components/stepper

**Signature:**

\`\`\`typescript
export declare type StepperSignature = {
    Element: HTMLDivElement;
    Blocks: {
        default: unknown;
    };
    Arguments: {
        name: string;
        age: number;
    };
};
\`\`\`
",
  "foo/addon.sum.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.sum
hide_title: true
title: sum() Helper
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [sum](./addon.sum.md)

## sum() Helper

### Import Path: addon/helpers/sum

**Signature:**

\`\`\`typescript
export default function sum(a: number, b: number): number;
\`\`\`

## Parameters

|  Parameter | Type | Description |
|  --- | --- | --- |
|  a | number | left side |
|  b | number | right side |

**Returns:**

number

the sum of the left and right side

## Example

This is a helper that can be used in

\`\`\`ts
import sum from 'my-addon/helpers/sum';

export default <template>{{sum 1 2}}</template>
\`\`\`

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`modulePath 1`] = `
Object {
  "foo/addon.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bar
hide_title: true
title: Bar class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bar](./addon.bar.md)

## Bar class

### Import Path: addon/this/was/a/bad/idea

**Signature:**

\`\`\`typescript
export declare class Bar 
\`\`\`

## Remarks

A widget for widgetting

## Example


\`\`\`ts
const bar = new Bar();
\`\`\`

",
  "foo/addon.baz.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.baz
hide_title: true
title: Baz class
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Baz](./addon.baz.md)

## Baz class

### Import Path: addon/deeply/nested/mess

**Signature:**

\`\`\`typescript
export declare class Baz 
\`\`\`

## Remarks

A thingy for thingying

",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Classes

|  Classes | Description | Import Path |
|  --- | --- | --- |
|  [Baz](./addon.baz.md) |  | addon/deeply/nested/mess |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`packageDocumentation 1`] = `
Object {
  "foo/addon.a.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.a
hide_title: true
title: a variable
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [a](./addon.a.md)

## a variable


**Signature:**

\`\`\`typescript
a = \\"\\"
\`\`\`
",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

Some docs

## Remarks

This is a remarks section

## Variables

|  Variables | Description | Import Path |
|  --- | --- | --- |
|  [a](./addon.a.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) | Some docs |

",
}
`;

exports[`retains custom information on nodes given a visitor 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "label": "Overview",
      },
      Object {
        "items": Array [
          Object {
            "id": "addon",
            "label": "Overview",
          },
          Object {
            "collapsed": false,
            "items": Array [
              Object {
                "label": "Summary",
              },
              Object {
                "id": "addon.component._constructor_",
                "label": "(constructor)",
              },
              Object {
                "id": "addon.component.args",
                "label": "args",
              },
            ],
            "label": "Component",
          },
          Object {
            "collapsed": false,
            "items": Array [
              Object {
                "label": "Summary",
              },
              Object {
                "id": "addon.stepper.foo",
                "label": "foo",
              },
              Object {
                "id": "addon.stepper.render",
                "label": "render",
              },
            ],
            "label": "Stepper",
          },
          Object {
            "id": "addon.steppersignature",
            "label": "StepperSignature",
          },
          Object {
            "label": "sum",
            "thinging": "thing",
          },
        ],
        "label": "addon",
      },
    ],
    "label": "Packages",
  },
]
`;

exports[`type alias 1`] = `
Object {
  "foo/addon.bar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.bar
hide_title: true
title: Bar type alias
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [Bar](./addon.bar.md)

## Bar type alias


**Signature:**

\`\`\`typescript
export declare type Bar = Partial<Record<string, unknown>>;
\`\`\`
",
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## TypeAliases

|  TypeAliases | Description | Import Path |
|  --- | --- | --- |
|  [Bar](./addon.bar.md) |  |  |

",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;

exports[`variable 1`] = `
Object {
  "foo/addon.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon
hide_title: true
title: addon package
---
[Home](./index.md) &gt; [addon](./addon.md)

## addon package

## Variables

|  Variables | Description | Import Path |
|  --- | --- | --- |
|  [myVaR](./addon.myvar.md) |  |  |

",
  "foo/addon.myvar.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: addon.myvar
hide_title: true
title: myVaR variable
---
[Home](./index.md) &gt; [addon](./addon.md) &gt; [myVaR](./addon.myvar.md)

## myVaR variable


**Signature:**

\`\`\`typescript
myVaR: number
\`\`\`
",
  "foo/index.md": "---
# Do not edit this file. It is automatically generated by the docusaurus-api-extractor plugin
id: index
hide_title: true
title: API Reference
slug: /
---
[Home](./index.md)

## API Reference

## Packages

|  Package | Description |
|  --- | --- |
|  [addon](./addon.md) |  |

",
}
`;
